# KinectLibraries

./: .appveyor.yml  .directory  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.7e5f91a  README.md
KinectDepthImageOutputLibrary/: CMakeLists.txt
KinectDepthImageOutputWrapper/: CMakeLists.txt  kinectdepthimageoutputwrapper.h
KinectMotorControlWrapper/: CMakeLists.txt
cmake/: Findcereal.cmake  Findlibfreenect.cmake  Findlibfreenect2.cmake  libfreenect.txt.in  libfreenect2.txt.in
docs/: Doxyfile.in
src/: .directory  CMakeLists.txt
src/KinectBackend/: .directory  CMakeLists.txt  KinectBackend.cpp
src/KinectDepthImageOutputLibrary/: CMakeLists.txt  kinectdepthimageoutputlibrary.cpp
src/KinectDepthImageOutputWrapper/: CMakeLists.txt
src/KinectFrontend/: .directory  CMakeLists.txt  KinectFrontend.cpp  KinectFrontend.h  main.cpp  motor_control.ui
src/KinectFrontend/Widgets/Konnector/: CMakeLists.txt  konnector.cpp  konnector.h  konnector.ui  konnector_settings.cpp  konnector_settings.h  konnector_settings.ui
src/KinectFrontend/Widgets/Logger/: CMakeLists.txt  logger.cpp  logger.h
src/KinectFrontend/Widgets/MotorKontrol/: motor_control.ui
src/KinectInputOutput/: CMakeLists.txt  KinectInputOutput.cpp
src/KinectInterface/: CMakeLists.txt  KinectInterface.cpp
src/KinectInterface/KinectBackend/: CMakeLists.txt  KinectBackend.cpp
src/KinectInterface/KinectInputOutput/: CMakeLists.txt  KinectInputOutput.cpp
src/KinectInterface/KinectObject/: CMakeLists.txt  KinectObject.cpp
src/KinectMotorControlWrapper/: CMakeLists.txt  KinectMotorControlWrapper.cpp  KinectMotorControlWrapper.h  main.cpp  motor_control.ui
src/KinectObject/: CMakeLists.txt  KinectObject.cpp
src/KinectOpenGL/: CMakeLists.txt  KinectOpenGL.cpp
src/include/: .directory  .testKinectLibrary.h.kate-swp  KinectBackend.h  KinectInputOutput.h  KinectInterface.h  KinectObject.h  KinectOpenGL.h  kinectdepthimageoutputlibrary.h  kinectdepthimageoutputwrapper.h  testLibrary.h
src/test/: CMakeLists.txt  test_buffer.cxx  test_pthread.cxx
